- [ ]  Per component CSS - [x]  Hot reload - [x]  Tailwind JIT - low priority - [ ]  Server Side Rendering - [ ]  Pre-prerendering
- [ ]  Add database
- [x]  Dockerise
- [ ]  Move Autotask API from BlazorWasmDemo
- [ ]  Tailwind Form Styling

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,13 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="bg-white h-full mx-2 p-4">
+    <h1 class="text-4xl">Welcome</h1>
 
-Welcome to your new app.
+    <SurveyPrompt Title="How is Blazor working for you?" />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    <p class="py-4">
+        Welcome to your new app.
+    </p>
+
+    <User></User>
+</div>
