--- a/Client/App.razor
+++ b/Client/App.razor
@@ -4,7 +4,9 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <div class="p-4 text-2xl">
+                <p>Sorry, there's nothing at this address.</p>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
