--- a/Client/Components/SurveyPrompt.razor
+++ b/Client/Components/SurveyPrompt.razor
@@ -1,4 +1,4 @@
-﻿<div class="mt-4 p-4 bg-indigo-500 border-1-4 border-orange-800 text-black max-w-4xl mx-auto rounded-xl shadow-md"
+﻿<div class="mt-4 p-4 bg-red-200 border-1-4 border-orange-800 text-black max-w-4xl mx-auto rounded-xl shadow-md"
     role="alert">
     <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
     <strong>@Title</strong>
