--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,13 +1,8 @@
 ﻿@page "/"
-
 <div class="bg-white h-full mx-2 p-4">
     <h1 class="text-4xl">Welcome</h1>
-
-    <SurveyPrompt Title="How is Blazor working for you?" />
-
-    <p class="py-4">
-        Welcome to your new app.
-    </p>
-
-    <User></User>
+    <SurveyPrompt Title="How is Blazor working for you?"/>
+    <p class="py-4">Welcome to your new app.</p>
+    @* <User></User> *@
 </div>
+
