--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using Nexus.Client
 @using Nexus.Client.Shared
 @using Nexus.Client.Components
+@using Nexus.Shared
+@using Nexus.Shared.Models
+@using Nexus.Shared.Models.Autotask
