--- a/Client/Pages/ShowTicket.razor
+++ b/Client/Pages/ShowTicket.razor
@@ -1,24 +1,35 @@
 ﻿@page "/autotask/ticket"
 @inject HttpClient Http
 
-<h3>Ticket</h3>
+<div class="bg-white h-full mx-2 p-4">
+    <h3 class="text-xl">Ticket</h3>
 
-@if (_ticket == null)
-{
-    <p>...Loading</p>
-}
-else
-{
-    <h1>@_ticket</h1>
-}
+    <div class="bg-indigo-200 border-2 border-indigo-300 shadow-lg rounded h-50 w-50 text-center">
+        @if (_ticket == null)
+        {
+            <p class="font-italic">...Loading</p>
+        }
+        else
+        {
+            <h1 class="text-4xl">@_ticket.Title</h1>
+
+            <h3 class="text-xl">@_ticket.TicketNumber</h3>
+                                                     
+            <p>@_ticket.UserDefinedFields[0].value</p>
+        }
+    </div>
+
+</div>
+
 
 @code {
     private IEnumerable<Ticket> _tickets;
     private Ticket _ticket;
-    
+
     protected override async Task OnInitializedAsync()
     {
-        _tickets = await Http.GetFromJsonAsync<IEnumerable<Ticket>>("api/autotask/tickets");
-        _ticket = await Http.GetFromJsonAsync<Ticket>("api/autotak/ticket/68275");
+    // _tickets = await Http.GetFromJsonAsync<IEnumerable<Ticket>>("api/autotask/tickets");
+        _ticket = await Http.GetFromJsonAsync<Ticket>("api/autotask/tickets/68275");
     }
+
 }
