--- a/Client/Shared/Sidebar.razor
+++ b/Client/Shared/Sidebar.razor
@@ -3,15 +3,16 @@
         <div class="px-4 pb-1">
             <div class="flex justify-between">
                 <a href="/"
-                    class="text-4xl font-semibold tracking-widest uppercase text-gray-800 focus:text-gray-800 hover:text-gray-800 hover:no-underline">Nexus
+                   class="text-4xl font-semibold tracking-widest uppercase text-gray-800 focus:text-gray-800 hover:text-gray-800 hover:no-underline">
+                    Nexus
                 </a>
                 <button
                     class="md:invisible focus:outline-none px-2 transform transition-transform duration-300 ease-in-out @HamburgerRotateCssClass"
                     @onclick="ToggleNavMenu">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                         stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
+                              d="M4 6h16M4 12h16M4 18h16"/>
                     </svg>
                 </button>
             </div>
@@ -46,6 +47,15 @@
                     012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
                     </svg> *@
             </NavMenuItem>
+
+            <NavMenuItem Href="autotask/ticket" Title="Ticket">
+                @* <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19
+                                11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0
+                                012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+                                </svg> *@
+            </NavMenuItem>
         </nav>
 
     </div>
@@ -62,4 +72,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
