--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,19 +1,68 @@
 ﻿@inherits LayoutComponentBase
 
+<div class="grid grid-rows-1 grid-cols-sidebar-layout">
+    <div class="bg-gray-100 border-r-2 border-gray-300 py-4">
+        <div class="flex flex-col space-y-2">
+            <div class="flex-auto space-x-1 mx-2 px-2 flex items-center content-center bg-white rounded-lg focus-within:ring-2 focus-within:ring-blue-500">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                    </svg>    
+                </div>
+                <div>
+                    <input type="text" class="rounded text-xl h-full w-full bg-white border-0 focus:outline-none focus:ring-0" placeholder="Search">
+                </div>
+                
+            </div>
+            <NavMenuItem Href="counter" Title="Counter" icon="house-door"></NavMenuItem>
+            <NavMenuItem Href="fetchdata" Title="Fetch Data" icon="box-seam"></NavMenuItem>
+            <NavMenuItem Href="autotask/ticket" Title="Autotask" icon="bank"></NavMenuItem>
+            <NavMenuItem Href="DemoBody" Title="Demo Body" icon="house"></NavMenuItem>
+
+
+        </div>
+
+    </div>
+
+    <div class="grid grid-cols-1 grid-rows-mobile-layout">
+        <NavbarComponent></NavbarComponent>
+        <SubNavbarComponent></SubNavbarComponent>
+        @Body
+        <FooterComponent></FooterComponent>
+    </div>
+</div>
+
+
+@*<div class="grid grid-cols-1 gap-1">
+  <div class="bg-indigo-400 h-12">1 Navbar</div>
+  <div class="bg-white border-gray-800 border-2">2 Body</div>
+  <div class="bg-indigo-400">3</div>
+  <div class="bg-indigo-400">4</div>
+  <div class="bg-indigo-400">5</div>
+  <div class="bg-indigo-400">6</div>
+  <div class="bg-indigo-400">7</div>
+  <div class="bg-indigo-400">8</div>
+  <div class="bg-indigo-400">9</div>
+</div>*@
+
+
+@*
 <div class="page">
     <div class="flex-col bg-blue-900 md:flex-row flex min-h-screen">
+        $1$ <Navbar></Navbar> #1#
         <Sidebar />
 
-        @* <div class="flex-none px-4 w-24 min-h-full">
+        $1$ <div class="flex-none px-4 w-24 min-h-full">
             <a href="http://blazor.net" target="_blank" class="md:ml-auto">About</a>
-            </div> *@
+            </div> #1#
 
-        <div id="content" class="flex-grow bg-gradient-to-br from-blue-100 to-blue-200">
+        <div id="content" class="flex-grow bg-gradient-to-br from-blue-100 to-blue-200 pt-2">
             @Body
         </div>
 
-        @* <div class="flex-none px-4 md:w-2/12 min-h-full bg-orange-600">
+        $1$ <div class="flex-none px-4 md:w-2/12 min-h-full bg-orange-600">
             Right sidebar
-            </div> *@
+            </div> #1#
     </div>
 </div>
+*@
