--- a/Client/Shared/NavMenuItem.razor
+++ b/Client/Shared/NavMenuItem.razor
@@ -2,39 +2,24 @@
     class="inline-flex items-center text-lg tracking-widest text-gray-900 focus:text-white hover:text-white focus:bg-indigo-600 hover:bg-indigo-500 w-full h-10 hover:no-underline">
     <span class="inline-flex justify-center items-center ml-4 mr-2">
         @ChildContent
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <i class="bi-@icon text-2xl"></i>
+        @*<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1
                 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0
                 001-1v-4a1 1
                 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
-        </svg>
+        </svg>*@
     </span>
     <span>@Title</span>
 </a>
 
 @code {
-
-
-
     [Parameter]
-
-
-
     public string Href { get; set; }
-
-
-
     [Parameter]
-
-
-
     public string Title { get; set; }
-
-
-
     [Parameter]
-
-
-
     public RenderFragment ChildContent { get; set; }
+    [Parameter]
+    public string icon { get; set; }
 }
