--- a/Client/Shared/NavbarComponent.razor
+++ b/Client/Shared/NavbarComponent.razor
@@ -10,10 +10,10 @@
             <a href="#">About Us</a>
         </div>
         <div class="mx-4 text-xl font-semibold text-gray-700">
-            <a href="#">Professional Services</a>
+            <a href="#">Sales</a>
         </div>
         <div class="mx-4 text-xl font-semibold text-gray-700">
-            <a href="#">Unprofessional Services</a>
+            <a href="#">Service</a>
         </div>
         <div class="flex-auto"></div>
         <div class="mx-3">
