--- a/Server/Pages/_Host.cshtml
+++ b/Server/Pages/_Host.cshtml
@@ -17,7 +17,7 @@
     <body>
         <component type="typeof(App)" render-mode="WebAssemblyPrerendered"/>
 
-        <div id="blazor-error-ui">
+        <div id="blazor-error-ui" class="hidden">
             <environment include="Staging,Production">
                 An error has occurred. This application may no longer respond until reloaded.
             </environment>
