--- a/Server/Pages/_Host.cshtml
+++ b/Server/Pages/_Host.cshtml
@@ -13,21 +13,25 @@
         <base href="~/"/>
         <link href="css/app.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
     </head>
     <body>
         <component type="typeof(App)" render-mode="WebAssemblyPrerendered"/>
 
-        <div id="blazor-error-ui" class="hidden">
-            <environment include="Staging,Production">
-                An error has occurred. This application may no longer respond until reloaded.
-            </environment>
-            <environment include="Development">
-                An unhandled exception has occurred. See browser dev tools for details.
-            </environment>
-            <a href="" class="reload">Reload</a>
-            <a class="dismiss">🗙</a>
-        </div>
-
-        <script src="_framework/blazor.webassembly.js"></script>
+    <div id="blazor-error-ui" class="hidden">
+        <environment include="Staging,Production">
+            An error has occurred. This application may no longer respond until reloaded.
+        </environment>
+        <environment include="Development">
+            An unhandled exception has occurred. See browser dev tools for details.
+        </environment>
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
+    
+            
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
+    
     </body>
 </html>
